--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "post-install-cmd": [
         "php artisan clear-compiled",
         "chmod -R 777 storage",
-        "php artisan passport:keys"
+        "php artisan passport:keys",
+        "ini_set('curl.cainfo', '/cacert.pem');"
     ]
     },
     "extra": {
