--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,7 @@
         "post-install-cmd": [
         "php artisan clear-compiled",
         "chmod -R 777 storage",
-        "php artisan passport:keys",
-        "ini_set('curl.cainfo', '/cacert.pem');"
+        "php artisan passport:keys"
     ]
     },
     "extra": {
