--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,10 @@
         "post-install-cmd": [
         "php artisan clear-compiled",
         "chmod -R 777 storage",
-        "php artisan passport:keys"
+        "php artisan passport:keys",
+        "php artisan tinker",
+        "phpinfo()",
+        "exit"
     ]
     },
     "extra": {
