--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,7 @@
         "post-install-cmd": [
         "php artisan clear-compiled",
         "chmod -R 777 storage",
-        "php artisan passport:keys",
-        "php artisan tinker",
-        "phpinfo()",
-        "exit"
+        "php artisan passport:keys"
     ]
     },
     "extra": {
